Use the correct conversion factor

BUG: 466257